profile/deployment-svc-ingress-webprofile.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile
  namespace: profile
spec:
  replicas: 1
  selector:
    matchLabels:
      name: profile
      metadata: profile
  template:
    metadata:
      labels:
        name: profile
        metadata: profile
    spec:
      containers:
      - name: profile
        image: 768876311475.dkr.ecr.ap-southeast-1.amazonaws.com/macross-webprofile:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: profile
  namespace: profile
spec:
  #type: LoadBalancer
  ports:
    - port: 80
      #nodePort: 30080
  selector:
    name: profile
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: profile-tls-ingress
  namespace: profile
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/acme-challenge-type: "http01"	
    cert-manager.io/cluster-issuer: "letsencrypt-profile"
spec:
  tls:
    - hosts:
      - profile-testing.ical.host
      secretName: profile-tls
  rules:
  - host: profile-testing.ical.host
    http:
      paths:
      - backend:
          serviceName: profile
          servicePort: 80
        path: /
