profile/deployment-svc-ingress-webprofile2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-testing
  namespace: testing-profile
spec:
  replicas: 1
  selector:
    matchLabels:
      name: profile-testing
      metadata: profile-testing
  template:
    metadata:
      labels:
        name: profile-testing
        metadata: profile-testing
    spec:
      containers:
      - name: profile-testing
        image: 768876311475.dkr.ecr.ap-southeast-1.amazonaws.com/macross-webprofile:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: profile-testing
  namespace: testing-profile
spec:
  #type: LoadBalancer
  ports:
    - port: 80
      #nodePort: 30080
  selector:
    name: profile-testing
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: profile-tls-ingress
  namespace: testing-profile
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/acme-challenge-type: "http01"	
    cert-manager.io/cluster-issuer: "letsencrypt-profile-testing"
spec:
  tls:
    - hosts:
      - profile.ical.host
      secretName: profile-testing-tls
  rules:
  - host: profile.ical.host
    http:
      paths:
      - backend:
          serviceName: profile-testing
          servicePort: 80
        path: /
